<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_started"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:orientation="vertical"
    tools:context="com.meeof.meeof.activity.GetStartedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:background="@color/colorPrimaryBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.11">

            <ImageView
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/meeoflogolarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.77"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <com.meeof.meeof.custom.CustomFontTextView
                        android:gravity="center"
                        android:lineSpacingExtra="-6dp"
                        android:id="@+id/customFontTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/splash_text_01"
                        android:textColor="@color/whiteColor"
                        android:textSize="16dp"
                        app:fontName="@string/font_name_hind_medium" />

                </LinearLayout>

                <LinearLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.meeof.meeof.custom.CustomFontTextView
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/text01"
                        android:text="@string/splash_text_02"
                        android:textColor="@color/whiteColor"
                        android:textSize="16dp"
                        app:fontName="@string/font_name_hind_medium" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.20"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.meeof.meeof.custom.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:lineSpacingExtra="-6dp"
                        android:text="@string/get_started_text_01"
                        android:textColor="@color/whiteColor"
                        android:textSize="14dp"
                        app:fontName="@string/font_name_hind_light" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.meeof.meeof.custom.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        android:text="@string/get_started_text_02"
                        android:textColor="@color/whiteColor"
                        android:textSize="14dp"
                        app:fontName="@string/font_name_hind_light" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.meeof.meeof.custom.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:text="@string/get_started_text_03"
                        android:visibility="gone"
                        android:textColor="@color/whiteColor"
                        android:textSize="14dp"
                        app:fontName="@string/font_name_hind_light" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.7"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.2">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"
                    android:background="@drawable/bg_started" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.2">

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <LinearLayout
            android:id="@+id/googleBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.1"
            android:background="@drawable/button_rounded_corners_background"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/google_plus_logo" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8">

                <com.meeof.meeof.custom.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_with_google"
                    android:textColor="@color/whiteColor"
                    android:textSize="14.5dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />


            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/facebookBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.1"
            android:background="@drawable/button_rounded_corners_background"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="17dp"
            android:paddingRight="20dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3">

                <ImageView

                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_centerVertical="true"
                    android:padding="3dp"
                    android:src="@drawable/ic_facebook" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.82">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/connectWithFbButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:text="connect_with_facebook"
                    android:visibility="gone" />

                <com.meeof.meeof.custom.CustomFontTextView
                    android:maxLines="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="3dp"
                    android:text="@string/continue_with_facebook"
                    android:textColor="@color/whiteColor"
                    android:textSize="14.5dp" />

            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/otherBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.1"
            android:background="@drawable/button_rounded_corners_grey_background"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.meeof.meeof.custom.CustomFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/other_options"
                    android:textColor="@color/whiteColor"
                    android:textSize="14.5dp" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:id="@+id/termsConditionsLlBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.04">

        <com.meeof.meeof.custom.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/get_started_agreement_text"
            android:textColor="@color/usualTextColor"
            android:textSize="10dp" />

        <com.meeof.meeof.custom.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/terms_and_privacy_text"
            android:textColor="@color/usualTextColor"
            android:textSize="10dp" />

    </LinearLayout>

</LinearLayout>
